<resources>
    <string name="app_name" translatable="false">SpacePang</string>
    <string name="button" translatable="false">Button</string>
    <string name="options">Settings</string>
    <string name="difficulty">Difficulty</string>
    <string name="classic">Classic</string>
    <string name="hard">Hard</string>
    <string name="controller">Controller</string>
    <string name="tilt">Tilt</string>
    <string name="touch">Touch</string>
    <string name="confirm">Confirm</string>
    <string name="classic_score">Classic Score</string>
    <string name="hard_score">Hard Score</string>
    <string name="guide">Guide</string>
    <string name="play">Play</string>
    <string name="noconnection">There is no internet connection</string>
    <string name="empyt_slot">Empty Set</string>
    <string name="globalscore">Global Scores Selected</string>
    <string name="localscore">Local Scores Selected</string>
    <string name="share">These are my highscores on SpacePang!</string>
    <string name="highscores">Highscores</string>
    <string name="no_scores">There are no highscores yet</string>
    <string name="classic_select">Classic Difficulty selected</string>
    <string name="hard_select">Hard Difficulty selected</string>
    <string name="tilt_select">Tilt Mode selected</string>
    <string name="drag_select">Drag Mode selected</string>
    <string name="username_length">Username must be between 3 and 15 characters</string>
    <string name="username_notValid">Only letters and numbers are allow</string>
    <string name="username_saved">Username changed successfully</string>
    <string name="image" translatable="false">image</string>
    <string name="slot1" translatable="false">slot1</string>
    <string name="slot2" translatable="false">slot2</string>
    <string name="slot3" translatable="false">slot3</string>
    <string name="slot4" translatable="false">slot4</string>
    <string name="editor" translatable="false">Editor</string>
    <string name="username" translatable="false">Username</string>
    <string name="player1wins">Player 1 wins!</string>
    <string name="player2wins">Player 2 wins!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="splashscreen" translatable="false">Developed by Among Bugs</string>
    <string name="editor_guide_line1">Here you can create your own levels</string>
    <string name="editor_guide_line2">There are 4 slot available and the location of the bricks will be always auto-saved</string>
    <string name="editor_guide_line3">You can change the type of the brick by touching it</string>
    <string name="editor_guide_line4">The transparent one mean that will be no brick in that spot in singlePlayer</string>
    <string name="editor_guide_line5">The red one represents a simple brick, so its color will change in singlePlayer</string>
</resources>