<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkgalaxy"
    tools:context=".Options">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="177dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/options"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ConfirmButton"
        android:layout_width="116dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#808A8A8A"
        android:ems="10"
        android:fontFamily="@font/electrolize"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/ConfirmButton"
        app:layout_constraintEnd_toStartOf="@+id/ConfirmButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/Difficulty"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/difficulty"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <CheckBox
        android:id="@+id/checkBox_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/electrolize"
        android:onClick="onDifficultyClicked"
        android:text="@string/hard"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBox_classic"
        app:layout_constraintTop_toBottomOf="@+id/Difficulty" />

    <CheckBox
        android:id="@+id/checkBox_classic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/electrolize"
        android:onClick="onDifficultyClicked"
        android:text="@string/classic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_hard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Difficulty" />

    <TextView
        android:id="@+id/Controller"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/controller"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Difficulty" />

    <CheckBox
        android:id="@+id/accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/electrolize"
        android:onClick="onDifficultyClicked"
        android:text="@string/tilt"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/drag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Controller" />

    <CheckBox
        android:id="@+id/drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/electrolize"
        android:onClick="onDifficultyClicked"
        android:text="@string/touch"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/accelerometer"
        app:layout_constraintTop_toBottomOf="@+id/Controller" />

</androidx.constraintlayout.widget.ConstraintLayout>