<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkgalaxy"
    android:theme="@style/Theme.DrawableTest"
    tools:context=".Editor">

    <ImageButton
        android:id="@+id/btn3_1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn3_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2_1" />

    <ImageButton
        android:id="@+id/btn3_2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn3_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3_1"
        app:layout_constraintTop_toBottomOf="@+id/btn2_2" />

    <ImageButton
        android:id="@+id/btn3_3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn3_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3_2"
        app:layout_constraintTop_toBottomOf="@+id/btn2_3" />

    <ImageButton
        android:id="@+id/btn3_4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn3_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3_3"
        app:layout_constraintTop_toBottomOf="@+id/btn2_4" />

    <ImageButton
        android:id="@+id/btn3_5"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3_4"
        app:layout_constraintTop_toBottomOf="@+id/btn2_5" />

    <ImageButton
        android:id="@+id/btn1_1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        android:forceDarkAllowed="true"
        android:theme="@style/Theme.DrawableTest"
        app:layout_constraintEnd_toStartOf="@+id/btn1_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editor" />

    <ImageButton
        android:id="@+id/btn1_5"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1_4"
        app:layout_constraintTop_toBottomOf="@+id/editor" />

    <ImageButton
        android:id="@+id/btn1_4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn1_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1_3"
        app:layout_constraintTop_toBottomOf="@+id/editor" />

    <ImageButton
        android:id="@+id/btn1_3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn1_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1_2"
        app:layout_constraintTop_toBottomOf="@+id/editor" />

    <ImageButton
        android:id="@+id/btn1_2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn1_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1_1"
        app:layout_constraintTop_toBottomOf="@+id/editor" />

    <ImageButton
        android:id="@+id/btn4_1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn4_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3_1" />

    <ImageButton
        android:id="@+id/btn4_2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn4_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4_1"
        app:layout_constraintTop_toBottomOf="@+id/btn3_2" />

    <ImageButton
        android:id="@+id/btn4_5"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4_4"
        app:layout_constraintTop_toBottomOf="@+id/btn3_5" />

    <ImageButton
        android:id="@+id/btn4_3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn4_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4_2"
        app:layout_constraintTop_toBottomOf="@+id/btn3_3" />

    <ImageButton
        android:id="@+id/btn4_4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn4_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4_3"
        app:layout_constraintTop_toBottomOf="@+id/btn3_4" />

    <ImageButton
        android:id="@+id/btn2_1"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn2_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1_1" />

    <ImageButton
        android:id="@+id/btn2_2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn2_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2_1"
        app:layout_constraintTop_toBottomOf="@+id/btn1_2" />

    <ImageButton
        android:id="@+id/btn2_5"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2_4"
        app:layout_constraintTop_toBottomOf="@+id/btn1_5" />

    <ImageButton
        android:id="@+id/btn2_4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn2_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2_3"
        app:layout_constraintTop_toBottomOf="@+id/btn1_4" />

    <ImageButton
        android:id="@+id/btn2_3"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toStartOf="@+id/btn2_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2_2"
        app:layout_constraintTop_toBottomOf="@+id/btn1_3" />

    <Button
        android:id="@+id/btnSave1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/slot1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSave3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSave4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/slot4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Play"
        app:layout_constraintStart_toEndOf="@+id/btnSave3" />

    <Button
        android:id="@+id/btnSave2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/slot2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSave4"
        app:layout_constraintEnd_toStartOf="@+id/Play"
        app:layout_constraintStart_toEndOf="@+id/btnSave1" />

    <Button
        android:id="@+id/btnSave3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/slot3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/electrolize"
        android:text="@string/editor"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:fontFamily="@font/electrolize"
        android:text="@string/play"
        android:textColor="@color/white"
        android:onClick="showPlayEditedGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>